# restapi/operations/post_forgot_password_responses.go
@@ -1,36 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package operations
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-)
-
-// PostForgotPasswordOKCode is the HTTP code returned for type PostForgotPasswordOK
-const PostForgotPasswordOKCode int = 200
-
-/*PostForgotPasswordOK Forgot password
-
-swagger:response postForgotPasswordOK
-*/
-type PostForgotPasswordOK struct {
-}
-
-// NewPostForgotPasswordOK creates PostForgotPasswordOK with default headers values
-func NewPostForgotPasswordOK() *PostForgotPasswordOK {
-
-	return &PostForgotPasswordOK{}
-}
-
-// WriteResponse to the client
-func (o *PostForgotPasswordOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
-
-	rw.WriteHeader(200)
-}
