# swagger.yaml
@@ -59,19 +59,22 @@ paths:
     post:
       parameters:
         - in: body
-          name: password.
+          name: user
           schema:
             type: object
             required:
-              - accessToken
+              - accountType
               - password
-              - type
+              - token
+              - userId
             properties:
-              accessToken:
+              accountType:
                 type: string
               password:
                 type: string
-              type:
+              token:
+                type: string
+              userId:
                 type: string
       responses:
         '200':
